fix covering issues of header and footer

--- a/src/components/Container/Container.module.css
+++ b/src/components/Container/Container.module.css
@@ -3,4 +3,6 @@
   flex-direction: column;
   align-items: center;
   width: 100%;
+  margin-top: 50px;
+  margin-bottom: 5rem;
 }
